--- a/tema03/t03_04.md
+++ b/tema03/t03_04.md
@@ -842,7 +842,7 @@ Si algún campo no cumple la validación, Nest devuelve automáticamente una res
 
 Para proteger las rutas que requieren credenciales de login para acceder (token), debemos crear un guardian derivado de la clase **AuthGuard** que utilice 'jwt', es decir, la clase JWTStrategy que hemos creado antes para validar el token y dejarnos acceder al servicio en caso de ser válido (o devolver un error 401).
 
-`nest g guard auth/jwt-auth` (la opción --flat es para no crear una carpeta)
+`nest g guard auth/jwt-auth --flat` (la opción --flat es para no crear una carpeta)
 
 ```typescript
 import { Injectable } from '@nestjs/common';
