Ejemplo contacto session y token

--- a/tema03/t03_04.md
+++ b/tema03/t03_04.md
@@ -718,17 +718,19 @@ La autenticación basada en tokens es un método mediante el cual nos aseguramos
 Para poder generar un token utilizaremos la librería *passport-jwt*:
 
 ```
+npm install --save @nestjs/passport
 npm install --save @nestjs/jwt passport-jwt
 npm install --save-dev @types/passport-jwt
 ```
 
 El paquete @nestjs/jwt que hemos instalado es el que tiene las utilidades para manipular JWT. El paquete passport-jwt es el encargado de implementar la estrategia JWT y @types/passport-jwt proporciona las definiciones de tipos de TypeScript.
 
-Con el objetivo de encapsular las operaciones de autenticación, vamos a generar un módulo y su servicio:
+Con el objetivo de encapsular las operaciones de autenticación, vamos a generar el controlador, un módulo y su servicio:
 
 ```
 nest g module auth
 nest g service auth
+nest g controller auth
 ```
 
 En el fichero `auth.service.ts` añadiremos el método `login`, importando el servicio `JwtService`. Los usuarios los tendremos por ahora en un array predefinido.
@@ -819,7 +821,7 @@ export class AuthController {
     }
 }
 ```
-Como se puede observar, se ha utilizado una clase (LoginDto) que representa los datos del login que se van a recibir: _usuario_ y _password_. Con `ValidationPipe` hacemos también una validación de los campos que nos llegan. Los decoradores para validar los campos se encuentran en la clase **LoginDto**. Para usar validaciones debemos tener instalada la librería **class_validator** `npm i class_validator`. En nuestro caso, verificamos que los 2 campos tengan valores de tipo string y que no estén vacíos.
+Como se puede observar, se ha utilizado una clase (LoginDto) que representa los datos del login que se van a recibir: _usuario_ y _password_. Con `ValidationPipe` hacemos también una validación de los campos que nos llegan. Los decoradores para validar los campos se encuentran en la clase **LoginDto**. Para usar validaciones debemos tener instalada la librería **class_validator** `npm i class-validator class-transformer`. En nuestro caso, verificamos que los 2 campos tengan valores de tipo string y que no estén vacíos.
 
 ```typescript
 import {
@@ -857,19 +859,41 @@ Una vez creado esto, debemos indicar qué métodos de los controladores necesita
 ```typescript
 import { Controller, Get, Param, Put, Body, Delete, Post, UseGuards } from '@nestjs/common';
 import { JwtAuthGuard } from 'src/auth/jwt-auth.guard';
-import { TareaDto } from './dto/tarea-dto/tarea-dto';
-import { TareaService } from './tarea.service';
+import { ContactoDto } from './dto/contacto-dto/contacto-dto';
+import { ContactoService } from './contacto.service';
 
-@Controller('tarea')
-export class TareaController {
+@Controller('contacto')
+export class ContactoController {
     ...
-    // POST /tarea
+    // POST /contacto
     @Post()
     @UseGuards(JwtAuthGuard)
-    async crear(@Body() crearTareaDto: TareaDto) {
-        return this.tareaService.insertar(crearTareaDto);
+    async crear(@Body() crearContactoDto: ContactoDto) {
+        return this.contactoService.insertar(crearContactoDto);
     }
     ...     
+}
+```
+Lo último que nos queda, es crear un strategy para poder exigir en aquellas rutas que queramos proteger un token. Para ello, nos crearemos el fichero `jwt.strategy.ts` dentro de `auth`con el siguiente contenido:
+```typescript
+import { Injectable } from "@nestjs/common";
+import { PassportStrategy } from "@nestjs/passport";
+import { Strategy, ExtractJwt } from "passport-jwt";
+import { jwtConstants } from "./constants";
+
+@Injectable()
+export class JwtStrategy extends PassportStrategy(Strategy) {
+  constructor() {
+    super({
+      jwtFromRequest: ExtractJwt.fromAuthHeaderAsBearerToken(),
+      ignoreExpiration: false,
+      secretOrKey: jwtConstants.secret,
+    });
+  }
+
+  async validate(payload: any) {
+    return { usuario: payload.sub };
+  }
 }
 ```
 
