--- a/tema04/t04_01.md
+++ b/tema04/t04_01.md
@@ -47,13 +47,13 @@ Como vamos a contratar un producto, deberemos registrarnos desde el *Área de cl
     <img src="../img/t04_ovh_registro_login.png" width="90%" />
 </div>
 
-Para elegir el VPS a contratar, vamos a la sección *Servidores* > *Servidores Privados Virtuales* de la página principal (antes de loguearnos)...
+Para elegir el VPS a contratar, vamos a la sección *Bare Metal y VPS* > *VPS - Servidores Privados Virtuales* de la página principal (antes de loguearnos)...
 
 <div align="center">
     <img src="../img/t04_ovh_contratar_vps_b.png" width="70%" />
 </div>
 
-... o bien vamos a la opción *Contratar > VPS* desde nuestra área de cliente...
+... o bien vamos a la opción *Contratar > Servidores Privados Virtuales* desde nuestra área de cliente...
  
 <div align="center">
     <img src="../img/t04_ovh_contratar_vps.png" width="50%" />
@@ -65,7 +65,7 @@ En ambos casos veremos los distintos planes de VPS ofertados:
     <img src="../img/t04_ovh_contratar_vps02.png" width="90%" />
 </div>
 
-Elegiremos la opción básica (izquierda), con un coste de unos 3 euros al mes (dependiendo de ofertas puntuales). Si hacemos clic en el botón correspondiente de *Seleccionar*, nos mostrarán las opciones que se ofrecen, y el botón cambiará a *Contratar* o alguna opción similar. Entre las opciones, podemos destacar las siguientes:
+Elegiremos la opción básica (izquierda), con un coste de unos 3,5 euros al mes (dependiendo de ofertas puntuales). Si hacemos clic en el botón correspondiente de *Seleccionar*, nos mostrarán las opciones que se ofrecen, y el botón cambiará a *Contratar* o alguna opción similar. Entre las opciones, podemos destacar las siguientes:
 
 * SLA del 99,95% (es decir, el servicio se garantiza que estará disponible el 99,95% del tiempo)
 * Ancho de banda de 100Mbps, con tráfico ilimitado
@@ -94,7 +94,7 @@ Un paso habitual si vamos a desarrollar una aplicación web con cierta visibilid
 
 Desde la propia plataforma de OVH podemos contratar el dominio, con diferentes extensiones (.es, .com, .net, .org, .eu...). Podemos, no obstante, utilizar el nombre de dominio *vpsXXXXXX.ovh.net*  que nos han asignado, para hacer webs de uso privado o restringido. También podemos contratar un dominio *.ovh* si buscamos un precio económico. Estos dominios se suelen ofrecer por entre 1 y 3 euros al año, aproximadamente.
 
-Desde la sección de *Web* en nuestra área de clientes podemos contratar el dominio.
+Desde la sección de *Web Cloud* en nuestra área de clientes podemos contratar el dominio.
 
 <div align="center">
     <img src="../img/t04_ovh_dominio.png" width="50%" />
@@ -106,7 +106,7 @@ Buscaremos primero el dominio que queremos comprar (por ejemplo, *miweb.com*), y
 2. También se puede contratar un alojamiento (hosting) con el dominio. En este caso no es necesario, ya que tenemos un VPS contratado, así que podemos elegir que no necesitamos alojamiento con el dominio.
 3. También podemos especificar las cuentas de correo del propietario, administrador, etc del dominio (se rellenan automáticamente con la cuenta de correo con que nos registramos). También podemos especificar el servidor DNS donde alojar el nombre de dominio (lo normal es elegir el que viene por defecto).
 
-Cuando ya tengamos contratado el dominio con las opciones que hayamos elegido, debemos **asociar el dominio al VPS**. En la sección *Web* de nuestra área de clientes existe una subsección *Dominios*, donde podemos ver los dominios que tenemos contratados. Haciendo clic en uno de ellos veremos su configuración actual.
+Cuando ya tengamos contratado el dominio con las opciones que hayamos elegido, debemos **asociar el dominio al VPS**. En la sección *Web Cloud* de nuestra área de clientes existe una subsección *Dominios*, donde podemos ver los dominios que tenemos contratados. Haciendo clic en uno de ellos veremos su configuración actual.
 
 <div align="center">
     <img src="../img/t04_ovh_dominio02.png" width="90%" />
