Actualizamos hasta docker incluido

--- a/tema04/t04_01.md
+++ b/tema04/t04_01.md
@@ -72,7 +72,7 @@ Elegiremos la opción básica (izquierda), con un coste de unos 3 euros al mes (
 * Incluye una IPv4 y otra IPv6, con todos los puertos abiertos
 * Permite elegir qué distribución de sistema operativo preinstalar. Podemos elegir entre distintas, como Linux Debian, CentOS, Ubuntu... También se ofrecen algunas distribuciones con interfaz gráfica incorporada, como KUbuntu o Windows Server.
 
-Si contratamos el VPS, nos pedirá que especifiquemos algunas opciones más, como nuestra localización (Europa), o el sistema operativo a instalar (en nuestro caso, utilizaremos Debian 9).
+Si contratamos el VPS, nos pedirá que especifiquemos algunas opciones más, como nuestra localización (Europa), o el sistema operativo a instalar (en este caso, se ha utilizado Debian 9, pero podemos usar la última, Debian 11).
 
 Una vez completados todos los pasos, y pasadas unas horas, recibiremos un e-mail en la cuenta de correo que utilizamos para registrarnos, con los datos de acceso al VPS.
 
