--- a/tema04/t04_02.md
+++ b/tema04/t04_02.md
@@ -88,7 +88,7 @@ Trataremos el caso concreto de instalar Docker sobre un sistema Debian. Podemos 
     <img src="../img/t04_docker_docs.png" width="90%" /> 
 </div>
 
-Pulsando el botón de *Get Docker* podemos elegir la versión que se ajuste a nuestro sistema (Debian para Docker Server en modo servidor, en nuestro caso).
+Pulsando el botón de *Download and install* podemos elegir la versión que se ajuste a nuestro sistema (Debian para Docker Server en modo servidor, en nuestro caso).
 
 <div align="center">
     <img src="../img/t04_docker_descarga.png" width="70%" /> 
@@ -113,41 +113,41 @@ sudo apt-get update
 2. Instalamos una serie de paquetes para permitir acceder a repositorios HTTPS:
 
 ```
-sudo apt-get install apt-transport-https ca-certificates curl 
-gnupg2 software-properties-common
+sudo apt-get update
+sudo apt-get install ca-certificates curl gnupg lsb-release
 ```
 
 3. Añadimos la clave GPG de Docker:
 
 ```
-curl -fsSL https://download.docker.com/linux/debian/gpg | 
-sudo apt-key add -
+sudo mkdir -p /etc/apt/keyrings
+curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 ```
 
-4. Tras esto, debemos verificar que tenemos la clave correctamente añadida, buscando sus últimos 8 dígitos:
+4. Tras esto, configuramos el repositorio:
 
 ```
-sudo apt-key fingerprint 0EBFCD88
+echo \
+  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+  $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 ```
 
-5. Añadimos el repositorio para la versión *stable*, en este caso, para sistemas x_86/amd64:
+5. Actualizamos el paquete apt:
 
 ```
-sudo add-apt-repository "deb [arch=amd64] 
-https://download.docker.com/
-linux/debian $(lsb_release -cs) stable"
-```
-
-6. Actualizamos de nuevo el índice de paquetes:
-
-```
+sudo chmod a+r /etc/apt/keyrings/docker.gpg
 sudo apt-get update
 ```
 
-7. E instalamos Docker:
+6. Instalamos Docker:
 
 ```
-sudo apt-get install docker-ce docker-ce-cli containerd.io
+sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+```
+7. Verificamos que todo es correcto con el Hola mundo:
+
+```
+sudo docker run hello-world
 ```
 
 > **NOTA:** `containerd.io` es un "demonio de contenedores", un software que actúa monitorizando los contenedores que se creen, funcionando entre el sistema operativo y el software del propio contenedor, abstrayendo algunas funcionalidades para que el comportamiento del contenedor sea el mismo independientemente del sistema *host* sobre el que se está ejecutando.
@@ -155,14 +155,14 @@ sudo apt-get install docker-ce docker-ce-cli containerd.io
 Si queremos elegir una versión específica, podemos buscar las versiones disponibles con:
 
 ```
-apt-cache madison docker-ce
+apt-cache madison docker-ce | awk '{ print $3 }'
 ```
 
 Y luego establecer la versión a instalar añadiendo la cadena de versión obtenida desde el listado anterior:
 
-```
-sudo apt-get install docker-ce=17.12.0~ce-0~debian
-docker-ce-cli=17.12.0~ce-0~debian containerd
+```bash
+$ VERSION_STRING=5:18.09.0~3-0~debian-stretch
+$ sudo apt-get install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-compose-plugin
 ```
 
 Una vez que ya hemos instalado Docker, podemos probar que todo ha ido correctamente ejecutando la imagen de prueba `hello-world`, que mostrará un mensaje de saludo por pantalla y finalizará.
@@ -185,13 +185,14 @@ sudo systemctl disable docker
 Para desinstalar Docker del sistema, ejecutamos el comando:
 
 ```
-sudo apt-get purge docker-ce 
+sudo apt-get purge docker-ce docker-ce-cli containerd.io docker-compose-plugin docker-ce-rootless-extras 
 ```
 
 También podemos eliminar las imágenes, contenedores, etc del sistema, borrando manualmente la carpeta `/var/lib/docker`:
 
 ```
 sudo rm -rf /var/lib/docker
+sudo rm -rf /var/lib/containerd
 ```
 
 ### 4.2.3. Creación y uso de contenedores
