--- a/tema04/t04_02.md
+++ b/tema04/t04_02.md
@@ -117,19 +117,36 @@ sudo apt-get update
 sudo apt-get install ca-certificates curl gnupg lsb-release
 ```
 
-3. Añadimos la clave GPG de Docker:
+3. Añadimos la clave GPG de Docker para Debian:
 
 ```
 sudo mkdir -p /etc/apt/keyrings
-curl -fsSL https://download.docker.com/linux/debian/gpg | sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+curl -fsSL https://download.docker.com/linux/debian/gpg | 
+sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
+```
+ En el caso de usar Ubuntu sería:
+```
+sudo mkdir -p /etc/apt/keyrings
+curl -fsSL https://download.docker.com/linux/ubuntu/gpg | 
+sudo gpg --dearmor -o /etc/apt/keyrings/docker.gpg
 ```
 
-4. Tras esto, configuramos el repositorio:
+4. Tras esto, configuramos el repositorio en Debian:
 
 ```
 echo \
-  "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
-  $(lsb_release -cs) stable" | sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+  "deb [arch=$(dpkg --print-architecture)  \
+  signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/debian \
+  $(lsb_release -cs) stable" | 
+  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
+```
+En el caso de usar Ubuntu:
+```
+echo \
+  "deb [arch=$(dpkg --print-architecture)  \
+  signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu \
+  $(lsb_release -cs) stable" | 
+  sudo tee /etc/apt/sources.list.d/docker.list > /dev/null
 ```
 
 5. Actualizamos el paquete apt:
@@ -142,7 +159,8 @@ sudo apt-get update
 6. Instalamos Docker:
 
 ```
-sudo apt-get install docker-ce docker-ce-cli containerd.io docker-compose-plugin
+sudo apt-get install docker-ce docker-ce-cli containerd.io \
+docker-compose-plugin
 ```
 7. Verificamos que todo es correcto con el Hola mundo:
 
@@ -162,7 +180,8 @@ Y luego establecer la versión a instalar añadiendo la cadena de versión obten
 
 ```bash
 $ VERSION_STRING=5:18.09.0~3-0~debian-stretch
-$ sudo apt-get install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io docker-compose-plugin
+$ sudo apt-get install docker-ce=$VERSION_STRING docker-ce-cli=$VERSION_STRING containerd.io \
+docker-compose-plugin
 ```
 
 Una vez que ya hemos instalado Docker, podemos probar que todo ha ido correctamente ejecutando la imagen de prueba `hello-world`, que mostrará un mensaje de saludo por pantalla y finalizará.
@@ -185,7 +204,8 @@ sudo systemctl disable docker
 Para desinstalar Docker del sistema, ejecutamos el comando:
 
 ```
-sudo apt-get purge docker-ce docker-ce-cli containerd.io docker-compose-plugin docker-ce-rootless-extras 
+sudo apt-get purge docker-ce docker-ce-cli containerd.io \
+docker-compose-plugin docker-ce-rootless-extras 
 ```
 
 También podemos eliminar las imágenes, contenedores, etc del sistema, borrando manualmente la carpeta `/var/lib/docker`:
@@ -498,4 +518,277 @@ Se generará un archivo TAR que podremos llevar a otra parte. En la nueva máqui
 
 ```
 docker load -i <path_a_archivo>
+```
+### 4.2.4. Despliegue de aplicaciones con Docker-Compose 
+En este punto vamos a ver Compose, herramienta utilizada para definir y ejecutar aplicaciones Docker de varios conteneores. Compose utiliza un archivo YAML (docker-compose.yml) para configurar los servicios de su aplicación, y luego con un solo comando poder crear e iniciar todos los servicios desde su configuración.
+
+Compose funciona en todos los entornos: producción, puesta en escena, desarrollo, así como pruebas. También tiene comandos destinados para gestionar todo el ciclo de vida de una aplicación.
+
+#### 4.2.4.1 Cómo instalar Docker-Compose 
+Para instalar Docker-compose primero debemos tener instalado Docker, una vez hecho esto pasamos a instalar Docker-compose en nuestro [sistema](https://docs.docker.com/compose/install/):
+
+```bash
+sudo apt install docker-compose
+```
+##### 4.2.4.1.1 Servicios y recursos de docker-compose
+Dentro del archivo de configuración de docker-compose [docker-compose.yml](https://docs.docker.com/compose/compose-file/) podemos definir diferentes recursos para desplegar nuestras aplicaciones, por tanto, lo primero que debemos hacer será definir los servicios:
+
+Dentro del fichero docker-compose.yml podemos para cara servicio establecer las siguientes propiedades para el contenedor:
+* image: Nombre de la imagen Docker para desplegar el contenedor
+* container-name: Nombre del contenedor a desplegar
+* build: path en donde se encuentra el dockerfile para construir la imagen
+* command: comandos a ejecutar al iniciar el contenedor
+* ports: puertos a utilizar. El formato para establecer los puertos es: puerto_host:puerto_contenedor.
+* volumes: volúmen que montar en el contenedor
+* env_file: sirve para añadir un archivo con una serie de variables de entorno. El archivo debe tener la extensión .env
+* environment: variables de entorno a definir en el contenedor. 
+* depends_on: servicios a iniciar antes que este
+* networks: redes a las que pertenece el contenedor
+* restart: política de reinicio del contenedor, pudiendo tener los valores no, always, on-failure, unless-stopped. Por defecto es no.
+* stdin_open: configura los contenedores de servicios para que se ejecuten con un stdin asignado.
+* tty: configura el contenedor de servicios para que se ejecute con un TTY.
+  
+Todas las propiedades son opcionales a excepción de la image. En el caso de no especificarse alguna de estas propiedades se tomarán los valores por defecto.
+Veamos un ejemplo:
+```
+services:
+  mongodb:
+    image: mongo:6.0.3
+    restart: unless-stopped
+    env_file: ./.env
+    environment:
+      - MONGO_INITDB_ROOT_USERNAME=$MONGODB_USER
+      - MONGO_INITDB_ROOT_PASSWORD=$MONGODB_PASSWORD
+    ports:
+      - $MONGODB_LOCAL_PORT:$MONGODB_DOCKER_PORT
+    volumes:
+      - db:/data/db
+  app:
+    depends_on:
+      - mongodb
+    build: ./ejemploDocker-compose
+    restart: unless-stopped
+    env_file: ./.env
+    ports:
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
+    environment:
+      - DB_HOST=mongodb
+      - DB_USER=$MONGODB_USER
+      - DB_PASSWORD=$MONGODB_PASSWORD
+      - DB_NAME=$MONGODB_DATABASE
+      - DB_PORT=$MONGODB_DOCKER_PORT
+    stdin_open: true
+    tty: true
+
+volumes:
+  db:
+```
+
+##### 4.2.4.1.2 Volúmenes
+Para definir un [volumen](https://docs.docker.com/compose/compose-file/#volumes-top-level-element) en el archivo de docker-composer debemos definir un bloque con el nombre del volumen y luego referenciarlo en los servicios que lo utilicen. El volumen no es más que el mecanismo que tienen los contenedores para persistir y compartir los datos. Las propiedades que podemos asignar a los volúmenes son:
+* name: Nombre del volumen
+* scope: Alcance del volúmen, por defecto tiene el valor local
+* driver: Driver del volumen, por defecto tiene el valor local
+* driver_opts: Opciones del driver del volumen. Estas pueden ser:
+  * type: tipo del volumne: none, bind, volume, tmpfs
+  * device: ruta al directorio del host que se va a montar
+  * o: Opciones del montaje. Puede ser: bind, private, ro, rw y share entre otros.
+* external: Indica si el volumen es externo o no, por defecto tiene el valor de false.
+* labels: Alcance del volumen. Por defecto tiene el valor local.
+
+Todas estas propiedades son opcionales, pero al menos es recomendable definir el nombre del volumen y la ruta en el sistema de archivos del hosts.
+Veamos un ejemplo:
+```
+volumes:
+  driver: local
+  driver_opts:
+    type: none
+    device: /path/to/mi-volumen
+    o: bind
+  data:
+    external:
+    name: mi-volumen
+```
+
+**Nota**: Es importante que la ruta que definamos en la propiedad device del bloque volumen exista en el sistema de archivos host.
+
+##### 4.2.4.1.3 Redes
+Con el objetivo de permitir la comunicación entre distintos contenedores de una aplicación (contenedor para un servidor web, contenedor para una base de datos, etc.), definiremos una red común siguiendo el modelo llamado Container Network Model. Siguiendo este modelo, existen varias implementaciones en Docker:
+* bridge: Es al red por defecto en Docker. Crea una red virtual en el host que conecta los contenedores por medio de un bridge virtual.
+* host: Deshabilita el aislamiento entre los contenedores y el host, no hace falta poner los puertos.
+* overlay: Permite la conexión de múltiples demonios Docker enre sí, permitiendo la comunicación entre servicios distribuidos.
+* ipvlan: El usuario obtiene el control total del direccionamiento ipv4 e ipv6 de la red.
+* macvlan: Permite asignar una mac a un contenedor haciendo que aparezca como un dispositivo físico en la red.
+* none: Deshabilita toda la gestión de red, normalmente usado en conjunto con un driver de red propio.
+
+Estas implementaciones se definen en el campo driver de la sección networks del archivo de configuración docker-compose.yml. Por defecto, sino se especifica nada se utilizará la red bridge. Los servicios que necesiten esa red las deberán referenciar. 
+
+Veamos un ejemplo de un servicio web (nginx con el puerto 80) que usa una base de datos (postgresql), y sólo será accesible desde la red que comparte ambos contenedores (web_net).
+
+```
+services:
+  web:
+    image: nginx
+    ports:
+      - 80:80
+    volumes:
+      - web_data:/usr/share/nginx/html
+    networks:
+      - web_net
+  db:
+    image: postgres
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - web_net
+volumes:
+    web_data:
+    db_data:
+networks:
+    web_net:
+        driver: bridge
+```
+##### 4.2.4.1.4 Dependencias
+El último punto del archivo de configuración que estudiaremos en este tema introductorio será la propiedad depends_on que podemos utilizar en los servicios de la sección service. Este campo es un array de cadenas, donde cada cadena es el nombre del servicio del que depende el servicio actual.
+
+Dado el ejemplo anterior:
+```
+version: '3.7' # Versión de docker-compose, depende de Docker
+services:
+  web:
+    image: nginx
+    ports:
+      - 80:80
+    volumes:
+      - web_data:/usr/share/nginx/html
+    networks:
+      - web_net
+    depends_on: # Ahora web depende de db
+      - db
+  db:
+    image: postgres
+    volumes:
+      - db_data:/var/lib/postgresql/data
+    networks:
+      - web_net
+volumes:
+    web_data:
+    db_data:
+networks:
+    web_net:
+        driver: bridge
+```
+Hemos puesto que antes de desplegar la aplicación web, deberá lanzar el servicio de la base de datos.
+
+#### 4.2.4.2 Comandos útiles para desplegar una aplicación con docker-compose
+
+```
+docker-compose up
+```
+Sirve para desplegar la aplicación, donde en el caso de no especificar ningún servicio en concreto pasaría a desplegar los servicios definidos en el archivo de configuración (docker-compose.yml)
+
+```
+docker-compose down
+```
+Sirve para detener los servicios desplegados
+
+```
+docker-compose ps
+```
+
+Mediante este comando podemos visualizar todos los servicios desplegafdos, los contenedores asociados y su estado actual junto con los puertos. Es útil para verificar si se ha desplegado todos los servicios de nuestro archivo docker-compose.yml
+
+```
+docker-compose logs
+```
+
+Nos permite visualizar los logs de todos los contenedores, ya sea porque ha fallado alguno de ellos, o bien porque queramos monitorizarlo. 
+
+```
+docker-compose exec
+```
+
+Nos permite ejecutar un comando en un contenedor desplegado. Es muy útil para depurar algún error.
+
+```
+docker-compose build
+```
+Sirve para reconstruir las imágenes de los servicios definidos en el fichero docker-composer.yml Es muy útil para reconstruir imágenes en el caso de haber modificado el fichero Dockerfile
+
+```
+docker-compose pull
+```
+Sirve para descargar las imágenes de los servicios definidos en el fichero docker-compose.yml
+
+**Ejercicios propuestos**:
+En este ejercicio vamos a desplegar una aplicación de prueba donde utilizaremos un servidor web, y una base de datos. El servidor web será una API REST en nodejs como hemos estado haciendo hasta ahora, de modo que nos permitirá consultar los contactos que van a estar almacenados en la base de datos de mongo.
+Para ello, vamos a aprovechar los conocimientos que tenemos de git y clonaremos el repositorio que tenemos con el ejemplo de tareas que realizamos en el tema 2.2. Veamos como hacer todo paso a paso.
+**1.** Instala docker y docker-composer en tu máquina virtual de Ubuntu.
+**2.** Clona el proyecto que tienes en el siguiente [repositorio](https://github.com/rmmgomez/contactos2.3.git), para ello puedes ejecutar: 
+```
+git clone https://github.com/rmmgomez/contactos2.3.git
+```
+Una vez que tenemos la aplicación lista para desplegar el paso siguiente será crear las imágenes que contengan por separado el servicio web y la base de datos. 
+**3.** Para ello vamos a crear un fichero llamado Dockerfile dentro del directorio contactos3.2 con el siguiente contenido:
+```
+FROM mhart/alpine-node:16
+WORKDIR /.
+COPY ["package.json", "package-lock.json*", "./"]
+RUN npm install
+COPY . .
+CMD [ "npm", "start" ]
+```
+Una vez que tenemos el fichero generado, pasamos a generar la imagen del servicio web, donde como vemos estamos copiando el código que tenemos en la carpeta routes y model. Para generar la imagen usaremos el comando
+
+```
+sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
+```
+Ejemplo en mi caso:
+```
+sudo docker build -t rmmgomez/contactos-node .
+```
+donde rmmgomez será el usuario de tu Docker hub. El parámetro -t será para especificar el tag de la imagen que vamos a crear, y el punto para indicar que la imagne será de la ruta actual. Una vez ejecutado el comando pasamos a ver las imágenes que tenemos con $ sudo docker images.
+
+**4.**El siguiente punto sería crearnos una imagen de mongo, pero podemos usar la última que tengan disponible, aunque este paso en nuestro caso no es necesario ejecutarlo ya que en el caso de no tenerla cuando lancemos nuestro despliegue en el caso de no tenerlo disponible se lo descargará
+```
+docker run --name mongodb -d mongo
+```
+**5.**Creamos el fichero de despliegue una vez que tenemos todas las imágenes necesarias listas. Nos crearemos el fichero docker-compose.yml fuera de nuestro directorio contactos3.2, de tal forma que tengamos en un directorio el fichero de configuración de docker y nuestra app contactos
+```
+services:
+  app:
+    depends_on:
+      - mongodb
+    image: rmmgomez/contactos-3.2
+    ports:
+      - 8080:8080
+    build: ./contactos3.2
+    restart: unless-stopped
+    stdin_open: true
+    tty: true
+    networks:
+      - web_net
+  mongodb:
+    image: mongo:latest
+    ports:
+      - 27017:27017
+    volumes:
+      - mongodb:/data/db
+    restart: unless-stopped
+    stdin_open: true
+    tty: true
+    networks:
+      - web_net
+volumes:
+  mongodb:
+networks:
+  web_net:
+      driver: bridge
+```
+
+Si os fijáis, al servicio de nuestra app le estoy diciendo que depende de mongo, y por tanto, primero debe ejecutarse la base de datos, y otro de los puntos importantes de este servicio es la red, que estamos usando bridge con el objetivo que puedan comunicarse los dos contenedores (nuestra app y el servicio de mongo)
+
+Una vez que hemos generado nuestro archivo, pasaremos a lanzarlo, usando el comando
+```
+sudo docker-compose up
 ```
