--- a/tema04/t04_03.md
+++ b/tema04/t04_03.md
@@ -257,7 +257,8 @@ A continuación se dan algunas pinceladas de las opciones que ofrecen los dos pr
 
 **AWS**
 
-Lo primero que debemos hacer para poder utilizar los servicios en la nube de Amazon es crear una cuenta gratuita a través del [enlace de registro](https://aws.amazon.com/es/account/). Tiene el inconveniente de que nos solicita datos de nuestra tarjeta de crédito para confirmar el registro, aunque luego no se harán cargos realmente. Pero por este motivo no vamos a emplearlo realmente en estos apuntes.
+Lo primero que debemos hacer para poder utilizar los servicios en la nube de Amazon es crear una cuenta gratuita a través del [enlace de registro](https://aws.amazon.com/es/account/). Tiene el inconveniente de que nos solicita datos de nuestra tarjeta de crédito para confirmar el registro, aunque luego no se harán cargos realmente. Nosotros, usaremos la cuenta de *awsacademy* para ello.
+
 
 Podemos consultar la web [aws.amazon.com/es/free](https://aws.amazon.com/es/free) para analizar qué elementos son gratuitos y por cuánto tiempo. Por ejemplo, la capa EC2 para despliegue de máquinas virtuales es gratuita durante los primeros 12 meses, con un uso de 750 horas al mes. Otras capas, como por ejemplo DynamoDB para almacenar bases de datos, o AWS Lambda para desplegar servicios sencillos, son gratuitas para siempre, incluyendo un número de horas gratuitas o de peticiones al mes.
 
