Aplicado formato ejercicio a 4.2

--- a/tema04/t04_02.md
+++ b/tema04/t04_02.md
@@ -720,16 +720,24 @@ docker-compose pull
 ```
 Sirve para descargar las imágenes de los servicios definidos en el fichero docker-compose.yml
 
-**Ejercicios propuestos**:
-En este ejercicio vamos a desplegar una aplicación de prueba donde utilizaremos un servidor web, y una base de datos. El servidor web será una API REST en nodejs como hemos estado haciendo hasta ahora, de modo que nos permitirá consultar los contactos que van a estar almacenados en la base de datos de mongo.
-Para ello, vamos a aprovechar los conocimientos que tenemos de git y clonaremos el repositorio que tenemos con el ejemplo de tareas que realizamos en el tema 2.2. Veamos como hacer todo paso a paso.
-**1.** Instala docker y docker-composer en tu máquina virtual de Ubuntu.
-**2.** Clona el proyecto que tienes en el siguiente [repositorio](https://github.com/rmmgomez/contactos2.3.git), para ello puedes ejecutar: 
+> **Ejercicios propuestos**:
+>
+> En este ejercicio vamos a desplegar una aplicación de prueba donde utilizaremos un servidor web, y una base de datos. El servidor web será una API REST en nodejs como hemos estado haciendo hasta ahora, de modo que nos permitirá consultar los contactos que van a estar almacenados en la base de datos de mongo.
+>
+> Para ello, vamos a aprovechar los conocimientos que tenemos de git y clonaremos el repositorio que tenemos con el ejemplo de tareas que realizamos en el tema 2.2. Veamos como hacer todo paso a paso.
+>
+> **1.** Instala docker y docker-composer en tu máquina virtual de Ubuntu.
+> 
+> **2.** Clona el proyecto que tienes en el siguiente [repositorio](https://github.com/rmmgomez/contactos2.3.git), para ello puedes ejecutar: 
+
 ```
 git clone https://github.com/rmmgomez/contactos2.3.git
 ```
-Una vez que tenemos la aplicación lista para desplegar el paso siguiente será crear las imágenes que contengan por separado el servicio web y la base de datos. 
-**3.** Para ello vamos a crear un fichero llamado Dockerfile dentro del directorio contactos2.3 con el siguiente contenido:
+
+> Una vez que tenemos la aplicación lista para desplegar el paso siguiente será crear las imágenes que contengan por separado el servicio web y la base de datos. 
+> 
+> **3.** Para ello vamos a crear un fichero llamado Dockerfile dentro del directorio contactos2.3 con el siguiente contenido:
+ 
 ```
 FROM mhart/alpine-node:16
 WORKDIR /.
@@ -738,22 +746,26 @@ RUN npm install
 COPY . .
 CMD [ "npm", "start" ]
 ```
-Una vez que tenemos el fichero generado, pasamos a generar la imagen del servicio web, donde como vemos estamos copiando el código que tenemos en la carpeta routes y model. Para generar la imagen usaremos el comando
+
+> Una vez que tenemos el fichero generado, pasamos a generar la imagen del servicio web, donde como vemos estamos copiando el código que tenemos en la carpeta routes y model. Para generar la imagen usaremos el comando
 
 ```
 sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
 ```
-Ejemplo en mi caso:
+> Ejemplo en mi caso:
+
 ```
 sudo docker build -t rmmgomez/contactos-node .
 ```
-donde rmmgomez será el usuario de tu Docker hub. El parámetro -t será para especificar el tag de la imagen que vamos a crear, y el punto para indicar que la imagne será de la ruta actual. Una vez ejecutado el comando pasamos a ver las imágenes que tenemos con $ sudo docker images.
+> donde rmmgomez será el usuario de tu Docker hub. El parámetro -t será para especificar el tag de la imagen que vamos a crear, y el punto para indicar que la imagne será de la ruta actual. Una vez ejecutado el comando pasamos a ver las imágenes que tenemos con $ sudo docker images.
 
-**4.**El siguiente punto sería crearnos una imagen de mongo, pero podemos usar la última que tengan disponible, aunque este paso en nuestro caso no es necesario ejecutarlo ya que en el caso de no tenerla cuando lancemos nuestro despliegue en el caso de no tenerlo disponible se lo descargará
+> **4.** El siguiente punto sería crearnos una imagen de mongo, pero podemos usar la última que tengan disponible, aunque este paso en nuestro caso no es necesario ejecutarlo ya que en el caso de no tenerla cuando lancemos nuestro despliegue en el caso de no tenerlo disponible se lo descargará
+
 ```
 docker run --name mongodb -d mongo
 ```
-**5.**Creamos el fichero de despliegue una vez que tenemos todas las imágenes necesarias listas. Nos crearemos el fichero docker-compose.yml fuera de nuestro directorio contactos2.3, de tal forma que tengamos en un directorio el fichero de configuración de docker y nuestra app contactos
+> **5.** Creamos el fichero de despliegue una vez que tenemos todas las imágenes necesarias listas. Nos crearemos el fichero docker-compose.yml fuera de nuestro directorio contactos2.3, de tal forma que tengamos en un directorio el fichero de configuración de docker y nuestra app contactos
+
 ```
 services:
   app:
@@ -786,9 +798,10 @@ networks:
       driver: bridge
 ```
 
-Si os fijáis, al servicio de nuestra app le estoy diciendo que depende de mongo, y por tanto, primero debe ejecutarse la base de datos, y otro de los puntos importantes de este servicio es la red, que estamos usando bridge con el objetivo que puedan comunicarse los dos contenedores (nuestra app y el servicio de mongo)
+> Si os fijáis, al servicio de nuestra app le estoy diciendo que depende de mongo, y por tanto, primero debe ejecutarse la base de datos, y otro de los puntos importantes de este servicio es la red, que estamos usando bridge con el objetivo que puedan comunicarse los dos contenedores (nuestra app y el servicio de mongo)
+>
+> Una vez que hemos generado nuestro archivo, pasaremos a lanzarlo, usando el comando
 
-Una vez que hemos generado nuestro archivo, pasaremos a lanzarlo, usando el comando
 ```
 sudo docker-compose up
 ```
