Arreglando los comandos que se vean completos en el pdf

--- a/tema04/practicas/t04_2022_2023.md
+++ b/tema04/practicas/t04_2022_2023.md
@@ -22,26 +22,32 @@ git clone urlRepositorio
 
 **4.** Antes de generar la imagen, vamos a modificar dentro del archivo index.js de nuestro proyecto (src/app.module.ts si tu proyecto ha sido hecho con Nest) la ruta a la cual se conecta la base de datos:
 
-**Antes:**
-Node
+**Antes con Node:**
 ```js
-mongoose.connect('mongodb://127.0.0.1:27017/playREST_v3', { useNewUrlParser: true, useUnifiedTopology: true });
+mongoose.connect('mongodb://127.0.0.1:27017/playREST_v3', 
+{ useNewUrlParser: true, useUnifiedTopology: true });
 ```
-Nest
-```ts
-imports: [JuegoModule, MongooseModule.forRoot('mongodb://127.0.0.1/playrest_V3'), WebModule],
-```
-**Después:**
-Node
+**Después con Node:**
 ```js
-mongoose.connect('mongodb://mongodb:27017/playREST_v3', { useNewUrlParser: true, useUnifiedTopology: true });
-```
-Nest
-```ts
-imports: [JuegoModule, MongooseModule.forRoot('mongodb://mongodb/playrest_V3'), WebModule],
+mongoose.connect('mongodb://mongodb:27017/playREST_v3', 
+{ useNewUrlParser: true, useUnifiedTopology: true });
 ```
 
-Lo que estamos haciendo con esto es decirle a la base de datos que debe conectarse con el container de mongo que vamos a configurar en nuestro archivo docker-compose.yml
+**Antes con Nest:**
+```ts
+imports: [JuegoModule, 
+MongooseModule.forRoot('mongodb://127.0.0.1/playrest_V3'), 
+WebModule],
+```
+
+**Después con Nest:**
+```ts
+imports: [JuegoModule, 
+MongooseModule.forRoot('mongodb://mongodb/playrest_V3'), 
+WebModule],
+```
+
+Lo que estamos haciendo con esto es decirle a la base de datos que debe conectarse con el container de mongo que vamos a configurar en nuestro archivo docker-compose.yml en lugar de a nuestro localhost (127.0.0.1)
 
 **5.** Generamos la imagen de nuestro servicio web
 ```bash
@@ -58,12 +64,12 @@ sudo docker run --name mongodb -d mongo
 ```
 **7.** Creamos y configuramos nuestro fichero de despliegue docker-compose.yml, recuerda que este fichero debe estar fuera de la raíz de nuestro proyecto:
 
-|-practica4
-|--docker-compose.yml
-|--practica3
-|---Dockerfile
-|---package.json
-|--- ...
+|-practica4 \
+|--docker-compose.yml \
+|--practica3 \
+|---Dockerfile \
+|---package.json \
+|--- ... \
 
 **Nota** Recuerda que en la configuración le debes decir que tu aplicación depende del servicio de mongo para que se ejecute primero la bbdd. Que estamos usando un tipo de red bridge para que puedan comunicarse los contenedores y que mongo está usando un volumen /data/db. (Ver ejercicio propuesto tema 4.2)
 
