Añado aviso de cambiar url en generar_usuarios

--- a/tema04/practicas/t04_2022_2023.md
+++ b/tema04/practicas/t04_2022_2023.md
@@ -49,6 +49,8 @@ WebModule],
 
 Lo que estamos haciendo con esto es decirle a la base de datos que debe conectarse con el container de mongo que vamos a configurar en nuestro archivo docker-compose.yml en lugar de a nuestro localhost (127.0.0.1)
 
+**Nota:** Esto mismo lo deberéis hacer en el fichero que tenéis en el proyecto para generar los usuarios de la aplicación.
+
 **5.** Generamos la imagen de nuestro servicio web
 ```bash
 sudo docker build -t <usuario docker-hub>/<nombre de la imagen> .
